Fixes images with caption alignment

--- a/scss/partials/_media.scss
+++ b/scss/partials/_media.scss
@@ -16,3 +16,7 @@ iframe,
 object {
 	max-width: 100%;
 }
+
+figure.wp-caption {
+  margin: 0;
+}
