--- a/style.css
+++ b/style.css
@@ -641,6 +641,9 @@ iframe,
 object {
   max-width: 100%; }
 
+figure.wp-caption {
+  margin: 0; }
+
 /*--------------------------------------------------------------
 7.1 Captions
 --------------------------------------------------------------*/
